Project Name Update

--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
                     <h2 class="mb-5">Projects</h2>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">Pigment Mapping via Subspace Clustering - Hyperspectral Image Analysis
+                            <h3 class="mb-0">Pigment Mapping in Reflectance Imaging Spectroscopy (RIS) Datasets - Unpservised Learning
                                 <a class="social-icon" href="https://www.linkedin.com/feed/update/urn:li:activity:7261014208564064256/"><i class="fab fa-linkedin-in"></i></a>
                                 
                             </h3> 
