Updated GPA -- Education Section

--- a/index.html
+++ b/index.html
@@ -144,11 +144,11 @@
                         <div class="flex-grow-1">
                             <h3 class="mb-0"> University of Delaware</h3>
                             <div class="subheading-mb3"> Master of Science</div>
-                            <div> Computer Engineering</div>
-                            <p> GPA: 3.57</p>
+                            <div> Electrical and Computer Engineering</div>
+                            <p> GPA: 3.67</p>
                         </div>
                         <div class="flex-shrink-0 date"> 
-                            <span class="text-primary"> Expected December 2024</span>
+                            <span class="text-primary"> February 2025</span>
                         </div>
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
