--- a/index.html
+++ b/index.html
@@ -186,6 +186,20 @@
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
+                            <h3 class="mb-0">Biomolecular Identification Algorithm for Mass Spectrometry
+                                <a class="social-icon" href="https://github.com/Cristy210/Biomolecular-Identification---Mass-Spectrometry"><i class="fab fa-github"></i></a>
+                                
+                            </h3> 
+                            <ul>
+                                <li>Investigated bioinformatics methods for identifying several biological targets with minimal spectrum pre-processing needed. </li>
+                                <li>Implemented and compared clustering algorithms, including K-Means, Spectral Clustering, and K-Subspaces Models, to enhance the identification and classification of biological targets.</li>
+                                <li>Designed a robust pipeline for data preprocessing, dimensionality reduction, and clustering, optimizing the algorithm’s accuracy and performance on bioinformatics datasets.</li>
+                                <li>Validated the algorithm's effectiveness on diverse datasets, demonstrating its adaptability and reliability in identifying biomolecular targets across varying experimental conditions.</li>     
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                        <div class="flex-grow-1">
                             <h3 class="mb-0">Hyperspectral Image Analysis - Unsupervised Learning
                                 <a class="social-icon" href="https://github.com/Cristy210/Hyper-Spectral-Image-Analysis"><i class="fab fa-github"></i></a>
                                 
