Updated Biomolecular identification github link

--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Biomolecular Identification Algorithm for Mass Spectrometry
-                                <a class="social-icon" href="https://github.com/Cristy210/Biomolecular-Identification---Mass-Spectrometry"><i class="fab fa-github"></i></a>
+                                <a class="social-icon" href="https://cristy210.github.io/Biomolecular-Identification---Mass-Spectrometry/"><i class="fab fa-github"></i></a>
                                 
                             </h3> 
                             <ul>
