--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">Winter Researcher</h3>
+                            <h3 class="mb-0">Computational Researcher</h3>
                             <div class="subheading mb-3">University of Delaware - Chemical Engineering Department</div>
                             <ul>
                                 <li> Implemented advanced numerical computations in Python using CuPy to leverage GPU acceleration</li>
