--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
         <!-- Font Awesome icons (free version)-->
         <script src="https://use.fontawesome.com/releases/v6.3.0/js/all.js" crossorigin="anonymous"></script>
         <!-- Google fonts-->
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/jpswalsh/academicons@1/css/academicons.min.css">
+
+        <!-- Google fonts-->
         <link href="https://fonts.googleapis.com/css?family=Saira+Extra+Condensed:500,700" rel="stylesheet" type="text/css" />
         <link href="https://fonts.googleapis.com/css?family=Muli:400,400i,800,800i" rel="stylesheet" type="text/css" />
         <!-- Core theme CSS (includes Bootstrap)-->
@@ -56,6 +59,7 @@
                     <div class="social-icons">
                         <a class="social-icon" href="https://www.linkedin.com/in/ms-cristy/"><i class="fab fa-linkedin-in"></i></a>
                         <a class="social-icon" href="https://github.com/Cristy210"><i class="fab fa-github"></i></a>
+                        <a class="social-icon" href="https://scholar.google.com/citations?user=2AxAZ0sAAAAJ&hl=en"><i class="ai ai-google-scholar-square"></i></a>
                         
                         
                     </div>
