--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                     <div class="social-icons">
                         <a class="social-icon" href="https://www.linkedin.com/in/ms-cristy/"><i class="fab fa-linkedin-in"></i></a>
                         <a class="social-icon" href="https://github.com/Cristy210"><i class="fab fa-github"></i></a>
-                        <a class="social-icon" href="https://scholar.google.com/citations?user=2AxAZ0sAAAAJ&hl=en"><i class="ai ai-google-scholar-square"></i></a>
+                        <a class="social-icon" href="https://scholar.google.com/citations?user=2AxAZ0sAAAAJ&hl=en"><i class="ai ai-google-scholar"></i></a>
                         
                         
                     </div>
