--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
                             <p> GPA: 3.1</p>
                         </div>
                         <div class="flex-shrink-0 date"> 
-                            <span class="text-primary"> August 2017 - May 2021</span>
+                            <span class="text-primary"> May 2021</span>
                         </div>
                     </div>
                 </div>
@@ -242,7 +242,7 @@
                             <div class="subheading mb-3"> 
                                 Course: Computing & Data Science for Soft Materials Innovation </div>
                             <ul>
-                                <li> Implemented data driven modeling on unstructured spectroscopy datasets namely, FTIR, GPC, and NMR to develop a quantitative polymer structure - performance relationship</li>
+                                <li> Implemented data driven statistical modeling on unstructured spectroscopy datasets namely, FTIR, GPC, and NMR to develop a quantitative polymer structure - performance relationship</li>
                                 <li> Employed different data pre-processing techniques like Binning, Peak Normalization, and PCA  </li>
                                 <li> Data Pre-Processing techniques are used for improving accuracy of the spectral analysis and reducing dimensionality for data modeling</li>
                                 <li> Implemented linear regression models in analyzing the relationship between polymer structure and performance</li>
