--- a/index.html
+++ b/index.html
@@ -181,8 +181,8 @@
                                 
                             </h3> 
                             <ul>
-                                <li>Developing and optimizing machine learning algorithms in Julia for pigment mapping, to enhance clustering performance and accuracy in hyperspectral RIS datasets. </li>
-                                <li>Implementing clustering techniques to group pixels based on spectral signatures, aiding in the identification of pigments.</li>
+                                <li>Developed and optimized machine learning algorithms in Julia for pigment mapping, to enhance clustering performance and accuracy in hyperspectral RIS datasets. </li>
+                                <li>Implemented clustering techniques to group pixels based on spectral signatures, aiding in the identification of pigments.</li>
                                 <li>Achieved over 95% accuracy in clustering results through the development and optimization of machine learning algorithms for spectral signature-based pigment identification in hyperspectral imaging datasets.</li>
                                 <li>Presented clustering analysis and research findings at technical conferences, including a keynote talk at Techno Heritage 2024 and a poster session at the 2024 IEEE Baltimore Technical Colloquium, underlining the contribution to technical innovation in the field of Machine Learning and signal processing. </li>     
                             </ul>
@@ -205,7 +205,7 @@
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Hyperspectral Image Analysis - Unsupervised Learning
-                                <a class="social-icon" href="https://cristy210.github.io/Hyper-Spectral-Image-Analysis/"><i class="fab fa-github"></i></a>
+                                <a class="social-icon" href="https://cristy210.github.io/Hyperspectral-Image-Analysis/"><i class="fab fa-github"></i></a>
                                 
                             </h3> 
                             <ul>
