--- a/index.html
+++ b/index.html
@@ -75,14 +75,15 @@
                             <h3 class="mb-0">Graduate Research Assistant</h3>
                             <div class="subheading mb-3">University of Delaware - Electrical and Computer Engineering Department</div>
                             <ul>
-                                <li>Working on an inter-disciplinary project  involving hyperspectral Image Analysis using unsupervised learning techniques. </li>
-                                <li>Utilizing matrix decomposition techniques from linear algebra to handle high-dimensional image data, transforming it into lower-dimensional subspaces for efficient Image analysis & Processing</li>
-                                <li>Developing and implementing machine learning algorithms in Julia to cluster and analyze hyperspectral image datasets using unsupervised learning methods</li>
-                                <li>Presenting research findings through weekly lab meetings using data visualizations created with CairoMakie, focusing on clear and actionable insights from hyperspectral data analysis</li>
-                                <li>Utilizing GitHub for version control and collaboration with the research team to manage the development workflow effectively</li>
+                                <li>Worked on an inter-disciplinary project  involving hyperspectral Image Analysis using unsupervised learning techniques. </li>
+                                <li>Utilized matrix decomposition techniques from linear algebra to handle high-dimensional image data, transforming it into lower-dimensional subspaces for efficient Image analysis & Processing</li>
+                                <li>Developed and implemented machine learning algorithms in Julia to cluster and analyze hyperspectral image datasets using unsupervised learning methods</li>
+                                <li>Presented research findings through weekly lab meetings using data visualizations created with CairoMakie, focusing on clear and actionable insights from hyperspectral data analysis</li>
+                                <li>Utilized GitHub for version control and collaboration with the research team to manage the development workflow effectively</li>
+                                <li>Developed a Julia software package, SubspaceClustering, which implements advanced subspace-based algorithms for efficient clustering and analysis of high-dimensional data</li>
                             </ul>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">February 2024 - Present</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">February 2024 - May 2025</span></div>
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
@@ -129,10 +130,11 @@
                             <h3 class="mb-0">Assistant System Engineeer</h3>
                             <div class="subheading mb-3">TATA Consultancy Services</div>
                             <ul>
-                                <li> Dealt with vulnerability assessment checks for client’s networks and applications</li>
-                                <li> Analyzed policies and reviewed practices to prevent unauthorized access to network-accessible resources</li>
-                                <li> Collaborated with a global team of 50 in consolidating client’s applications security</li>
-                                <li> Developed data sheets using advanced Excel tools to present data and communicate insights to the clients</li>
+                                <li> Conducted vulnerability assessment checks on Citi Corp’s internal network applications to identify and remediate security risks</li>
+                                <li> Collaborated with a globally distributed team of 50+ engineers and analysts to strengthen application security frameworks and streamline secure deployment practices</li>
+                                <li> Managed and maintained Excel-based tools to support application lifecycle documentation, including data sheets for tracking system updates, user access controls, and analyzing complex datasets using pivot tables to extract insights and support reporting</li>
+                                <li> Contributed to client application management processes, including requirement gathering, analysis of change impacts, and coordination with business users for issue resolution and risk mitigation</li>
+                                <li> Facilitated periodic documentation reviews and compliance checks in alignment with Citi's internal audit standards and enterprise-wide security policies</li>
                             </ul>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">March 2022 - December 2022</span></div>
