--- a/index.html
+++ b/index.html
@@ -72,7 +72,9 @@
                     <h2 class="mb-5">Experience</h2>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">Graduate Research Assistant</h3>
+                            <h3 class="mb-0">Graduate Research Assistant
+                                <a class="social-icon" href="https://github.com/Cristy210/SubspaceClustering.jl"><i class="fab fa-github"></i></a>
+                            </h3>
                             <div class="subheading mb-3">University of Delaware - Electrical and Computer Engineering Department</div>
                             <ul>
                                 <li>Worked on an inter-disciplinary project  involving hyperspectral Image Analysis using unsupervised learning techniques. </li>
