--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <!-- Core theme CSS (includes Bootstrap)-->
         <link href="css/styles.css" rel="stylesheet" />
     </head>
-    <body id="page-top">
+    <body id="page-top" data-bs-spy="scroll" data-bs-target="#sideNav" data-bs-offset="0" tabindex="0">
         <!-- Navigation-->
         <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
             <a class="navbar-brand js-scroll-trigger" href="#page-top">
@@ -50,11 +50,10 @@
                         <a href="mailto:mscristy@udel.edu">mscristy@udel.edu</a>
                     </div>
                     <p class="lead mb-5">
-                        I'm a master's student in Computer Engineering at the University of Delaware, 
-                        I have developed a solid foundation in different Machine Learning, Data Science, and Statistical Models through my academic research and coursework. 
-                        My current research focuses on developing clustering algorithms for detection and mapping of pigments used in ancient arachelogical paintings. These techniques are applied in Conservation Science particularly in the analysis of paintings by providing
-                        key insgihts into artist material use, painting condition and aritistic technical execution. 
-                        I'm looking forward to contributing to roles in Data Science, Machine Learning, and Computer Vision. 
+                        Completed my master's in Electrical and Computer Engineering at the University of Delaware with a strong focus on Data Science and
+                        Machine Learning. My MS research involved developing machine learning algorithms for Hyperspectral Image Analysis. <br><br>
+                        
+                        I'm actively looking for full-time oppportunities in Data Science, Machine Learning, and Image Analysis.
                     </p>
                     <div class="social-icons">
                         <a class="social-icon" href="https://www.linkedin.com/in/ms-cristy/"><i class="fab fa-linkedin-in"></i></a>
