Updated Profile -- Added downloadable `CV` option

--- a/index.html
+++ b/index.html
@@ -59,8 +59,7 @@
                         <a class="social-icon" href="https://www.linkedin.com/in/ms-cristy/"><i class="fab fa-linkedin-in"></i></a>
                         <a class="social-icon" href="https://github.com/Cristy210"><i class="fab fa-github"></i></a>
                         <a class="social-icon" href="https://scholar.google.com/citations?user=2AxAZ0sAAAAJ&hl=en"><i class="ai ai-google-scholar"></i></a>
-                        
-                        
+                        <a class="social-icon" href="Docs/CV.pdf" target="_blank"><i class="fas fa-file-pdf"></i></a>
                     </div>
                 </div>
             </section>
