--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                         Completed my master's in Electrical and Computer Engineering at the University of Delaware with a strong focus on Data Science and
                         Machine Learning. My MS research involved developing machine learning algorithms for Hyperspectral Image Analysis. <br><br>
                         
-                        I'm actively looking for full-time oppportunities in Data Science, Machine Learning, and Image Analysis.
+                        I'm actively looking for full-time opportunities in Data Science, Machine Learning, and Image Analysis.
                     </p>
                     <div class="social-icons">
                         <a class="social-icon" href="https://www.linkedin.com/in/ms-cristy/"><i class="fab fa-linkedin-in"></i></a>
