--- a/index.html
+++ b/index.html
@@ -151,6 +151,16 @@
                             <h3 class="mb-0"> University of Delaware</h3>
                             <div class="subheading-mb3"> Master of Science</div>
                             <div> Electrical and Computer Engineering</div>
+                            <div>Thesis:
+                                <a href = "https://scholar.google.com/citations?view_op=view_citation&hl=en&user=2AxAZ0sAAAAJ&citation_for_view=2AxAZ0sAAAAJ:u5HHmVD_uO8C" target="_blank">
+                                 Hyperspectral Image Analysis via Subspace Clustering
+                                </a>
+                            </div>
+                            <div> Advisor:
+                                <a href = "https://dahong.gitlab.io/" target="_blank">
+                                 Dr. David Hong
+                                </a>
+                            </div>
                             <p> GPA: 3.67</p>
                         </div>
                         <div class="flex-shrink-0 date"> 
