--- a/index.html
+++ b/index.html
@@ -71,7 +71,6 @@
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Graduate Research Assistant
-                                <a class="social-icon" href="https://github.com/Cristy210/SubspaceClustering.jl"><i class="fab fa-github"></i></a>
                             </h3>
                             <div class="subheading mb-3">University of Delaware - Electrical and Computer Engineering Department</div>
                             <ul>
@@ -80,7 +79,7 @@
                                 <li>Developed and implemented machine learning algorithms in Julia to cluster and analyze hyperspectral image datasets using unsupervised learning methods</li>
                                 <li>Presented research findings through weekly lab meetings using data visualizations created with CairoMakie, focusing on clear and actionable insights from hyperspectral data analysis</li>
                                 <li>Utilized GitHub for version control and collaboration with the research team to manage the development workflow effectively</li>
-                                <li>Developed a Julia software package, SubspaceClustering, which implements advanced subspace-based algorithms for efficient clustering and analysis of high-dimensional data</li>
+                                <li>Developed a Julia software package, <a href="https://github.com/Cristy210/SubspaceClustering.jl" target="_blank">SubspaceClustering.jl</a>, which implements advanced subspace-based algorithms for efficient clustering and analysis of high-dimensional data</li>
                             </ul>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">February 2024 - May 2025</span></div>
